--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.1",
+    "i18next": "^22.4.6",
     "react": "18.1.0",
+    "react-i18next": "^12.1.1",
     "react-native": "0.70.6",
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^4.4.1",
